--- a/talconfig.yaml
+++ b/talconfig.yaml
@@ -2,8 +2,8 @@
 clusterName: talos-k8s
 endpoint: https://192.168.1.101:6443
 
-talosVersion: v1.9.5
-kubernetesVersion: v1.32.2
+talosVersion: v1.9.5 # renovate: datasource=github-releases packageName=siderolabs/talos
+kubernetesVersion: v1.32.2 # renovate: datasource=github-releases packageName=kubernetes/kubernetes
 
 cniConfig:
   name: none
