add file to renovate

--- a/renovate.json
+++ b/renovate.json
@@ -14,7 +14,8 @@
       "customType": "regex",
       "description": "Terraform variables",
       "fileMatch": [
-        "^variables.tf$"
+        "^variables.tf$",
+        "^talconfig.yaml$"
       ],
       "matchStrings": [
         "variable\\s+\"(?<depName>[a-z0-9_]+?)_version\"\\s+{[\\s\\S]*?default\\s+=\\s+\"(?<currentValue>[a-z0-9.-]+)\"\\s+# renovate: datasource=(?<datasource>.+?)(?: packageName=(?<packageName>.+?))?(?: registryUrl=(?<registryUrl>[^\\s]+?))?(?: versioning=(?<versioning>.+?))?\\s"
