--- a/renovate.json
+++ b/renovate.json
@@ -14,11 +14,20 @@
       "customType": "regex",
       "description": "Terraform variables",
       "fileMatch": [
-        "^variables.tf$",
-        "^talconfig.yaml$"
+        "^variables.tf$"
       ],
       "matchStrings": [
         "variable\\s+\"(?<depName>[a-z0-9_]+?)_version\"\\s+{[\\s\\S]*?default\\s+=\\s+\"(?<currentValue>[a-z0-9.-]+)\"\\s+# renovate: datasource=(?<datasource>.+?)(?: packageName=(?<packageName>.+?))?(?: registryUrl=(?<registryUrl>[^\\s]+?))?(?: versioning=(?<versioning>.+?))?\\s"
+      ]
+    },
+    {
+      "customType": "regex",
+      "description": "Talconfig versioning",
+      "fileMatch": [
+        "^talconfig.yaml$"
+      ],
+      "matchStrings": [
+        "(?<depName>[a-zA-Z]+)Version:\\s+v?(?<currentValue>[a-z0-9.-]+)\\s+# renovate: datasource=(?<datasource>.+?)(?: packageName=(?<packageName>.+?))?(?: registryUrl=(?<registryUrl>[^\\s]+?))?(?: versioning=(?<versioning>.+?))?\\s"
       ]
     }
   ]
