--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,3 +1,7 @@
 [defaults]
 inventory = inventory/hosts.yaml
 host_key_checking = False
+
+[ssh_connection]
+ssh_args = -o ControlMaster=no -o ControlPersist=0
+control_path = %(directory)s/%%h-%%p-%%r
